[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Boat.tscn" type="PackedScene" id=2]
[ext_resource path="res://Turret.tscn" type="PackedScene" id=3]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Boat" parent="." instance=ExtResource( 2 )]

[node name="Turret1" parent="Boat" instance=ExtResource( 3 )]
position = Vector2( 24.3838, -1.95071 )

[node name="Turret2" parent="Boat" instance=ExtResource( 3 )]
position = Vector2( 24.3837, -33.6496 )

[node name="Turret3" parent="Boat" instance=ExtResource( 3 )]
position = Vector2( 24.8714, 29.7482 )

[node name="Boat2" parent="." instance=ExtResource( 2 )]
position = Vector2( 682.364, 418.398 )
